--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:shopping-cart": "node dist/shopping-cart/server/server.mjs"
+    "serve:ssr:shopping-cart": "node dist/shopping-cart/server/server.mjs",
+    "db-start": "json-server --watch ./src/assets/db.json"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +23,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.6",
     "express": "^4.18.2",
+    "json-server": "^1.0.0-beta.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
